# ClassSphere

./: .gitignore  .gitmessage  API_DOCUMENTATION.md  AUDIT_IMPLEMENTATION_PLAN.md  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FASE2_README.md  FINAL_REPORT.md  IMPLEMENTATION_STATUS.md  ISSUE_GOOGLE_ROUTES_500.md  PHASE3_README.md  QUICK_START_TDD.md  README.md  RUNTIME_CONFIG_IMPLEMENTATION.md  SECURITY.md  SPRINT1_PROGRESS.md  SPRINT1_SUMMARY.txt  chart-component-deployment-report.md  debug_browser_simulation.html  debug_jwt.py  deploy-chart-component.sh  docker-compose.production.yml  env.production.example  paths-to-remove.txt  requirements.txt  start_services.sh  test-cors-devcontainer.sh
backend/: .air.toml  .coverage  .coveragerc  .env  .env.example  .gitignore  Makefile  README.md  TESTING.md  app-coverage.out  auth_coverage.html  auth_coverage.out  cache_coverage.out  classsphere.db  cmd-coverage-new.out  cmd-coverage2.out  cmd-final.out  coverage-89percent.html  coverage-90.out  coverage-90percent.html  coverage-FINAL.out  coverage-final-89percent.out  coverage-final-90.out  coverage-final-90percent.out  coverage-final-90target.out  coverage-final-target-90.out  coverage-final-target.out  coverage-final.out  coverage-final2.out  coverage-full.out  coverage-global.out  coverage-target-90.out  coverage-ultimate.out  coverage.html  coverage.out  coverage_report.html  dashboard_coverage.html  dashboard_coverage.out  database_coverage.out  env.example  (+18 more)
backend/.github/workflows/: tdd-pipeline.yml
backend/auth/: jwt.go  jwt_test.go  middleware.go  middleware_test.go  password.go  password_test.go
backend/cache/: redis.go  redis_test.go
backend/cmd/api/: main.go  main_test.go
backend/config/: config.go  config_test.go
backend/database/: database.go  database_test.go
backend/handlers/: auth.go  auth_test.go  course_stats_edge_cases_test.go  dashboard.go  dashboard_enhanced_test.go  dashboard_fallback_test.go  dashboard_integration_test.go  dashboard_test.go  final_edge_cases_test.go  google.go  google_additional_test.go  google_edge_cases_test.go  google_integration_test.go  google_performance_test.go  google_test.go  search.go  search_test.go  test_helpers.go
backend/internal/adapters/auth/: jwt_handler.go
backend/internal/adapters/cache/: redis_cache.go  redis_cache_test.go
backend/internal/adapters/google/: classroom_service.go  classroom_service_test.go  mock_data.go  mock_data_test.go
backend/internal/adapters/http/: cors.go  cors_test.go  error_handler.go  error_handler_test.go  handler.go  handler_test.go  health.go  health_test.go  metrics.go  metrics_test.go  middleware.go  rate_limit.go  rate_limit_test.go  search_handler.go  search_handler_test.go  sse_handler.go  sse_handler_test.go  websocket_handler.go  websocket_handler_test.go
backend/internal/adapters/oauth/: google_oauth.go  google_oauth_test.go  (+1 more)
backend/internal/app/: auth_service.go  auth_service_test.go  classroom_service.go  classroom_service_test.go  dashboard_models.go  notification_hub.go  notification_hub_test.go  search_service.go  search_service_test.go  user_service.go  user_service_test.go
backend/internal/domain/: classroom.go  notification.go  notification_test.go  role.go  role_test.go  search.go  user.go  user_test.go
backend/internal/ports/: cache.go  classroom.go  oauth.go  repo.go  search_repository.go
backend/internal/shared/: config.go  config_test.go  errors.go  integration.go  logger.go  logger_test.go
backend/models/: user.go  user_test.go
backend/oauth/: google.go  google_test.go
backend/scripts/: check_users.go  create_test_users_with_roles.go  reset_demo_passwords.go  seed_demo_users.go  tmux_context_manager.sh  verify_port_8000.sh
backend/services/: google.go  google_test.go  metrics.go  metrics_test.go  search.go  search_test.go
backend/src/: .env  __init__.py
backend/src/app/: __init__.py  main.py
backend/src/core/: config.py  context_logger.py  exceptions.py
backend/src/dashboard_educativo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/services/: oauth_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_auth.py  test_dashboards.py  test_oauth.py
backend/tests/e2e/: test_e2e_integration.py  test_integration.py
backend/tests/fixtures/: test_data.py
backend/tests/integration/: test_admin.py  test_api_integration.py  test_auth.py  test_health.py  test_oauth.py  test_simple_integration.py
backend/tests/models/: test_auth_models.py
backend/tests/services/: test_auth_service.py
backend/tests/unit/: test_auth_api.py  test_auth_middleware.py  test_auth_service.py  test_config.py  test_config_setup.py  test_coverage_configuration.py  test_database.py  test_exceptions.py  test_google_service.py  test_health.py  test_infrastructure.py  test_lifespan.py  test_main.py  test_models.py  test_models_classroom.py  test_models_oauth.py  test_models_user.py  test_oauth_service.py  test_oauth_service_fixed.py  test_oauth_service_simple.py  test_role_system.py  test_security.py  test_service_factory.py  test_timeout_configuration.py
backend/tests/utils/: test_auth_utils.py
backend/testutils/: mocks.go
(+459 files in other folders)
