[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-educativo"
version = "1.0.0"
description = "Dashboard Educativo - Complete Educational System"
authors = [{name = "Dashboard Team", email = "team@dashboard.edu"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "uvicorn[standard]==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/app/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]